Fix spacing

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -21,10 +21,6 @@
       }
     }
 
-    p {
-      line-height: 1.2em;
-    }
-
     a {
       color: #000;
       text-decoration: underline;
@@ -45,6 +41,7 @@
     }
 
     #content {
+      line-height: 1.2em;
     }
 
     #content iframe, #content img {
